www/book.css
/* ... */
.wide-ad { display: flex; gap: 1em; padding: 1em; border: 2px solid #59b6ce; align-items: top; }
.wide-ad h1:hover::after { content: none; }
.wide-ad figure { margin: 0; }
.wide-ad figure figcaption { display: none; }
.wide-ad figure img { height: 7em; max-width: none; display: block; }
.wide-ad .description { display: flex; flex-direction: column; gap: 1em; }
.wide-ad .description * { margin: 0; }
@media only screen and (max-width: 520px) {
  .wide-ad { padding: .5em; gap: .5em; }
}

aside.ad .wide { display: none; }
aside.ad .narrow {
    border: 2px solid #59b6ce; background: #ecf5f8; text-align: left;
    display: flex; gap: .5ex; padding: .5ex; justify-content: space-between;
}
aside.ad .narrow a { white-space: pre; }
@media only screen and (max-width: 520px) {
  aside.ad .narrow { display: block}
}
@media only screen and (min-width: 1150px) {
    aside.ad .narrow { display: none; }
    aside.ad .wide {
        float: right; font-size: 66%; width: 25ex; clear: right; margin: 0 -28ex 1em 0;
        position: relative; display: block;
    }
    aside.ad img { width: 100%; display: block; }
    aside.ad a {
        position: absolute; bottom: .5ex; height: 100%; width: 100%;
        background: linear-gradient(to bottom, rgba(0,0,0,.1) 0%, black 100%);
        color: white; font-size: 120%; text-align: center; display: flex;
        flex-direction: column-reverse; padding: 1ex; box-sizing: border-box;
        opacity: 0; text-decoration: none; 
    }
    aside.ad a:hover { opacity: 1; }
    aside.ad a:visited { color: white; }
    aside.ad a:active { color: #59b6ce; }
}

.outline { font-size: 60%; font-family: monospace; column-width: 30ch; }
.outline code { break-inside: avoid; display: block; }
.outline > code { margin: .33em 0; }
.outline code > code { margin-left: 2ch; }

@media print {
    html { font-size: 12px; }
    #signup, nav.links { display: none;}
    .note-container:before { content: " ["; }
    .note-container, .note-container:before, .note-container:after { color: navy; }
    pre { font-size: 10px; }
    #toc a { text-decoration: none; color: black; }
    aside.ad { display: none; }
}

.highlight-region { font-size: 24px; line-height: 1.5; padding: 1em; }
.highlight-region mark { position: relative; padding: .1em; }
.highlight-region label {
    position: absolute; font: bold 80% sans-serif; 
}
.highlight-region label.above { top: -1.2em; }
.highlight-region label.below { bottom: -1.2em; }
.highlight-region label.left { left: 0; }
.highlight-region label.right { right: 0; }
.highlight-region label.side { top: .4em; }
.highlight-region label.side.left { right: calc(100% + .2em); left: auto; }
.highlight-region label.side.right { left: calc(100% + .2em); right: auto; }

